--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-certifi==2018.1.18
-chardet==3.0.4
-idna==2.6
-requests==2.18.4
-urllib3==1.24.2
+certifi==2022.12.7
+charset-normalizer==3.0.1
+idna==3.4
+requests==2.28.2
+urllib3==1.26.14
